--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
             <span id="someText">Нажми чтобы начать игру!</span>
         </div>
         <button id="restartButton">Restart</button>
+        <div class="buttons">
+            <div class="buttons__item button__up">
+                <img src="./img/up.png" alt="">
+            </div>
+            <div class="buttons__item button__down">
+                <img src="./img/down.png" alt="">
+            </div>
+            <div class="buttons__item button__left">
+                <img src="./img/left.png" alt="">
+            </div>
+            <div class="buttons__item button__right">
+                <img src="./img/right.png" alt="">
+            </div>
+        </div>
     </div>
     <script type="module" src="./Main.js"></script>
 </html>
